tests/baselines/reference/implicitAnyDeclareFunctionWithoutFormalType.errors.txt
implicitAnyDeclareFunctionWithoutFormalType.ts(2,14): error TS7006: Parameter 'x' implicitly has an 'any' type.
implicitAnyDeclareFunctionWithoutFormalType.ts(3,25): error TS7006: Parameter 'y' implicitly has an 'any' type.
implicitAnyDeclareFunctionWithoutFormalType.ts(4,16): error TS7006: Parameter 'a' implicitly has an 'any' type.
implicitAnyDeclareFunctionWithoutFormalType.ts(4,19): error TS7006: Parameter 'b' implicitly has an 'any' type.
implicitAnyDeclareFunctionWithoutFormalType.ts(4,22): error TS7006: Parameter 'c' implicitly has an 'any' type.
implicitAnyDeclareFunctionWithoutFormalType.ts(5,16): error TS7019: Rest parameter 'args' implicitly has an 'any[]' type.
implicitAnyDeclareFunctionWithoutFormalType.ts(6,16): error TS7006: Parameter 'z' implicitly has an 'any' type.
implicitAnyDeclareFunctionWithoutFormalType.ts(6,25): error TS7006: Parameter 'w' implicitly has an 'any' type.


==== implicitAnyDeclareFunctionWithoutFormalType.ts (8 errors) ====
    // these should be errors
    function foo(x) { };
                 ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    function bar(x: number, y) { };  // error at "y"; no error at "x"
                            ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
    function func2(a, b, c) { };     // error at "a,b,c"
                   ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                      ~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
                         ~
!!! error TS7006: Parameter 'c' implicitly has an 'any' type.
    function func3(...args) { };     // error at "args" 
                   ~~~~~~~
!!! error TS7019: Rest parameter 'args' implicitly has an 'any[]' type.
    function func4(z= null, w= undefined) { };  // error at "z,w"
                   ~~~~~~~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
                            ~~~~~~~~~~~~
!!! error TS7006: Parameter 'w' implicitly has an 'any' type.
    
    // these shouldn't be errors
    function noError1(x= 3, y= 2) { };
    function noError2(x: number, y: string) { };
    